# using-types-effectively

./: .editorconfig  .gitignore  .nojekyll  Makefile  README.md  _quarto.yml  custom.scss  index.html  pyproject.toml  refs.bib  tmpl.md  ute.html  ute.qmd
.github/workflows/: build-site.yml
examples/: ex_1_better.py  ex_1_literal.py  ex_1_simple.py  ex_2_simple.py  ex_3.py  ex_4.py  ex_guards_5.py  ex_invalid_state_6_better.py  ex_invalid_state_6_simple.py  ex_phantom.py  ex_phantom_7.py
src/: ex_1_simple.py  ex_2_better.py  ex_2_simple.py  ex_3.py  ex_4.py  ex_5.py  ex_6_better.py  ex_6_better_312.py  ex_6_simple.py  ex_7.py  ex_7_simple.py  gadt_8.hs
ute_files/libs/bootstrap/: bootstrap-58195ada163f9b939e0c719e571d61e9.min.css  bootstrap-e08ec9db1b5a10040b19adb0475541e4.min.css
