[project]
name = "ute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "mypy-extensions>=1.0.0",
    "pandoc-include>=1.4.3",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 95

[tool.ruff.lint]
ignore = ["F841"]

[tool.pytest.ini_options]
pythonpath = ["examples"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
